--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,10 +4,10 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <ul class="list-inline text-center">
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://www.instagram.com/downstocks/">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
           </li>
@@ -15,12 +15,12 @@
             <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-amazon fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://github.com/samkling/subtle-investment">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
