--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,7 +28,7 @@
             </a>
           </li>
         </ul>
-        <p class="copyright text-muted">Copyright &copy; SubtleInvestment 2019</p>
+        <p class="copyright text-muted">Copyright &copy; SubtleInvestment.com 2019</p>
       </div>
     </div>
   </div>
