--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,32 @@
-<header class="masthead" style="background-image: url('../../assets/img/home-bg.jpg')">
+<header *ngIf="isPost; else homePage" class="masthead" style="background-image: url('../../assets/img/post-bg.jpg')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="site-heading">
+        <div class="post-heading">
           <h1>{{pageInformation.heading}}</h1>
-          <span class="subheading">{{pageInformation.subHeading}}</span>
+          <h2 class="subheading">{{pageInformation.subHeading}}</h2>
+          <span class="meta">Posted by
+            <a href="#">{{pageInformation.author}}</a>
+            on {{pageInformation.date}}</span>
         </div>
       </div>
     </div>
   </div>
 </header>
+
+<ng-template #homePage>
+  <header class="masthead" style="background-image: url('../../assets/img/home-bg.jpg')">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>{{pageInformation.heading}}</h1>
+            <span class="subheading">{{pageInformation.subHeading}}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+</ng-template>
