--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,7 +1,5 @@
 <!-- Page Header -->
-<app-header></app-header>
+<app-header [pageInformation]="pageInfo" [isPost]="true"></app-header>
 
 <!-- Page Content -->
-<p>
-  post-page works!
-</p>
+<p>{{ pageInfo.heading }}</p>
