--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <!-- Page Header -->
-<app-header [pageInformation]="pageInfo"></app-header>
+<app-header [isHome]="true" [pageInformation]="pageInfo"></app-header>
 
 <!-- Page Content -->
 <div class="container">
