--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <ul class="list-inline text-center">
           <li class="list-inline-item">
-            <a href="https://www.instagram.com/downstocks/">
+            <a href="https://www.instagram.com/downstocks/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
@@ -12,7 +12,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="#" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-amazon fa-stack-1x fa-inverse"></i>
@@ -20,7 +20,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/samkling/subtle-investment">
+            <a href="https://github.com/samkling/subtle-investment" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -28,7 +28,7 @@
             </a>
           </li>
         </ul>
-        <p class="copyright text-muted">Copyright &copy; SubtleInvestment.com 2019</p>
+        <p class="copyright text-muted">Copyright &copy; SubtleInvesting.com 2019</p>
       </div>
     </div>
   </div>
