--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,6 +12,14 @@
             </a>
           </li>
           <li class="list-inline-item">
+            <a href="https://share.robinhood.com/110671" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
             <a href="#" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
