--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -31,10 +31,16 @@
 
         <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
 
-        <a href="#">
-          <img class="img-fluid" src="../../assets/img/post-sample-image.jpg" alt="">
-        </a>
-        <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
+<!--        <a href="#">-->
+<!--          <img class="img-fluid" src="" alt="">-->
+<!--        </a>-->
+<!--        <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>-->
+
+        <app-post-image
+          [srcStr]="'../../assets/img/post-sample-image.jpg'"
+          [altText]="'Sample Image'"
+          [caption]="'To go places and do things that have never been done before – that’s what living is all about.'"
+        ></app-post-image>
 
         <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
 
