--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -5,9 +5,26 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+      <p>
+        Welcome to SubtleInvesting.com! My name is Sam and I am personal finance fanatic.
+        Cashback credit cards and high interest savings accounts have been the story of my life since I graduated
+        from Michigan State University with a degree in Computer Science back in the spring of 2018. Go Green!
+      </p>
+      <p>
+        By day I am a software engineer working on an enterprise web application, and by night I am entrepreneurial minded personal finance and investing
+        junkie wanting to spread some money saving hacks I've learned. Who doesn't like making money?
+      </p>
+      <p>
+        Check out my blog and learn some stuff about making your money work for you. Sporadically there may be some health and technology
+        posts written too as my interests aren't only about monetary investing but also investing in yourself both physically and mentally.
+      </p>
+      <p>
+        You can find links at the bottom of the page to the SubtleInvesting Instagram page, to get your free Robinhood stock and start investing yourself, my github
+        repo containing all of the code to this blog, and also my personal amazon store where you can purchase items that I use everyday. Check them out!
+      </p>
+      <p>
+        -Sam
+      </p>
     </div>
   </div>
 </div>
