--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -35,6 +35,14 @@
                 </span>
             </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/in/sam-kling/" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+          </li>
         </ul>
         <p class="copyright text-muted">Copyright &copy; SubtleInvesting.com 2019</p>
       </div>
