--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -6,45 +6,8 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <p>Want to get in touch? Click the link below to send me a message or send an email to <span class="font-italic">subtleinvesting@gmail.com</span>, and I will get back to you as soon as possible!</p>
-      <p><a href = "mailto: subtleinvesting+contact@gmail.com">SubtleInvesting@gmail.com</a></p>
-<!--      &lt;!&ndash; Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. &ndash;&gt;-->
-<!--      &lt;!&ndash; WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! &ndash;&gt;-->
-<!--      &lt;!&ndash; To use the contact form, your site must be on a live web host with PHP! The form will not work locally! &ndash;&gt;-->
-<!--      <form name="sentMessage" id="contactForm" novalidate>-->
-<!--        <div class="control-group">-->
-<!--          <div class="form-group floating-label-form-group controls">-->
-<!--            <label>Name</label>-->
-<!--            <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">-->
-<!--            <p class="help-block text-danger"></p>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="control-group">-->
-<!--          <div class="form-group floating-label-form-group controls">-->
-<!--            <label>Email Address</label>-->
-<!--            <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">-->
-<!--            <p class="help-block text-danger"></p>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="control-group">-->
-<!--          <div class="form-group col-xs-12 floating-label-form-group controls">-->
-<!--            <label>Phone Number</label>-->
-<!--            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">-->
-<!--            <p class="help-block text-danger"></p>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="control-group">-->
-<!--          <div class="form-group floating-label-form-group controls">-->
-<!--            <label>Message</label>-->
-<!--            <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>-->
-<!--            <p class="help-block text-danger"></p>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <br>-->
-<!--        <div id="success"></div>-->
-<!--        <div class="form-group">-->
-<!--          <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>-->
-<!--        </div>-->
-<!--      </form>-->
+      <p class="text-center"><a href = "mailto: subtleinvesting+contact@gmail.com">SubtleInvesting@gmail.com</a></p>
+      <p class="text-center"><i class="fa fa-arrow-down"></i> Also check me out on all of the platforms below! <i class="fa fa-arrow-down"></i></p>
     </div>
   </div>
 </div>
